Bug #9993 2 unexpected warnings when dropping a routine and --skip-grant-tables
Submitted: 19 Apr 2005 10:18 Modified: 23 Jun 2005 13:32
Reporter: Guilhem Bichot
Status: Closed
Category:Server Severity:S3 (Non-critical)
Version:5.0-bk OS:Linux (linux)
Assigned to: Magnus Blaudd Target Version:

[19 Apr 2005 10:18] Guilhem Bichot
Description:
In mysql-test:

create t/sp_bug.test with this:
create procedure foo() select 1;
drop procedure foo;

Create t/sp_bug-master.opt with this:
--skip-grant-tables

and create an empty r/sp_bug.result, then run this test, and the output is:
+ create procedure foo() select 1;
+ drop procedure foo;
+ Warnings:
+ Error 1290    The MySQL server is running with the --skip-grant-tables option so it
cannot execute this statement
+ Warning       1405    Failed to revoke all privileges to dropped routine

Those two warnings are not expected. It can execute the DROP, so the "statement" the first
warning refers to is probably an internally generated statement for which the user should
not be notified. The 2nd warning should also not be there as we're not using privilege
tables.
Note that this isn't about a weird "mysql" database setup: the "mysql" database was
properly created by the testsuite, there is a mysql.proc; we are just legally using
--skip-grant-tables to not use privileges.

How to repeat:
see description
[26 May 2005 10:50] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/25295
[27 May 2005 19:11] Magnus Blaudd
Pushed to 5.0.7
[27 May 2005 21:06] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/25344
[23 Jun 2005 13:32] Jon Stephens
Thank you for your bug report. This issue has been addressed in the
documentation. The updated documentation will appear on our website
shortly, and will be included in the next release of the relevant
product(s).

Additional info:

Documented fixes in changelogs for 5.0.7 and 5.0.8; marked bug as Closed.