sql/sql_parse.cc
@@ -3982,7 +3982,7 @@ unsent_create_error:
       lex->sphead= 0;
 #ifndef NO_EMBEDDED_ACCESS_CHECKS
       /* only add privileges if really neccessary */
-      if (sp_automatic_privileges &&
+      if (sp_automatic_privileges && !opt_noacl &&
           check_procedure_access(thd, DEFAULT_CREATE_PROC_ACLS,
       				 db, name, 1))
       {
@@ -4247,7 +4247,7 @@ unsent_create_error:
 	if (check_procedure_access(thd, ALTER_PROC_ACL, db, name, 0))
           goto error;
 #ifndef NO_EMBEDDED_ACCESS_CHECKS
-	if (sp_automatic_privileges &&
+	if (sp_automatic_privileges && !opt_noacl &&
 	    sp_revoke_privileges(thd, db, name))
 	{
 	  push_warning(thd, MYSQL_ERROR::WARN_LEVEL_WARN, 
